src/objects/Client_Program_Year__c.object
<CustomObject>
    <fields>
        <fullName>Total_Billed_Hours__c</fullName>
        <inlineHelpText>Total hours reconciled and flown MINUS any hours credited back (e.g. for service issues, etc.)</inlineHelpText>
        <label>Total Billed Hours</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Credited_Hours__c</fullName>
        <label>Total Credited Hours</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Days_Accrued_to_Date__c</fullName>
        <formula>IF((today()- Start_Date__c )&lt;0,0,IF((today()- Start_Date__c )&gt;365,
Annual_Days_Allotted__c ,
(today()- Start_Date__c )* Accrual_per_Day__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Days Accrued to Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Days_Credited__c</fullName>
        <label>Total Days Credited</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Days_Flown__c</fullName>
        <label>Total Days Flown</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Days_in_Program_Period__c</fullName>
        <description>This is used to calculate % of program year remaining.</description>
        <formula>End_Date__c-Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is used to calculate % of program year remaining.</inlineHelpText>
        <label>Total Days in Program Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Days_in_Review__c</fullName>
        <label>Total Days in Review</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Deposit_Amount__c</fullName>
        <formula>Membership_Deposit__c +  Membership_Bonus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Deposit_Refund__c</fullName>
        <inlineHelpText>To aggregate deposit refund amount</inlineHelpText>
        <label>Total Deposit Refund</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Estimated_Flight_Cost__c</fullName>
        <label>Total Estimated Flight Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Estimated_Hours__c</fullName>
        <label>Estimated Booked and Tentative Hours</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Flight_Spend__c</fullName>
        <label>Total Flight Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Flown_Days_Credited_Days__c</fullName>
        <label>Total Flown Days + Credited Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Flown_Flight_Spend__c</fullName>
        <formula>IF (ISBLANK( Total_Flown_not_Reconciled_Est_Cost__c ), Total_Flight_Spend__c ,Total_Flight_Spend__c+Total_Flown_not_Reconciled_Est_Cost__c)</formula>
        <inlineHelpText>Total amounts applied to deposit from all reconciled flights plus estimated costs for all flown flights</inlineHelpText>
        <label>Total Flown Flight Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Flown_Hours__c</fullName>
        <inlineHelpText>Total reconciled and flown hours</inlineHelpText>
        <label>Total Flown Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Flown_Including_Credited_Hours__c</fullName>
        <formula>Total_Credited_Hours__c + Total_Flown_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Flown Including Credited Hours</inlineHelpText>
        <label>Total Flown Including Credited Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Flown_not_Reconciled_Est_Cost__c</fullName>
        <label>Total Flown not Reconciled Est Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Forecasted_Hours__c</fullName>
        <formula>Total_Billed_Hours__c +  Total_Estimated_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Billed hours plus booked and tentative hours</inlineHelpText>
        <label>Total Forecasted Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Accrued_to_Date__c</fullName>
        <formula>IF((today()-  Start_Date__c  )&lt;0,0,IF((today()-  Start_Date__c  )&gt;365,
   Annual_Hours_Allotted__c ,
  (today()-  Start_Date__c  )* Accrual_per_Day__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hours Accrued to Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours_In_Review__c</fullName>
        <inlineHelpText>To account for hours that are &quot;In Review&quot;</inlineHelpText>
        <label>Total Hours &quot;In Review&quot;</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <formula>Purchased_Hours__c +  Bonus_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hours</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Permitted_Annual_Days__c</fullName>
        <label>Annual Days Max</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Permitted_Annual_Hours__c</fullName>
        <label>Annual Hours Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Reconciled_Days__c</fullName>
        <label>Total Reconciled Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Hour_Contribution_Limit__c</fullName>
        <inlineHelpText>For FJ Only</inlineHelpText>
        <label>VP Hour Contribution Limit</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_End_Remaining_Hours__c</fullName>
        <formula>IF( End_Date__c &lt; TODAY(),   Allotted_plus_prior_yr_carry_over__c   - Total_Billed_Hours__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year-End Remaining Hours</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Program_Year_Remaining__c</fullName>
        <formula>1-(Days_into_Program_Year__c / Total_Days_in_Program_Period__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Days into Program Year/Total Days in Program Period</inlineHelpText>
        <label>% of Program Year Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ownerid__c</fullName>
        <formula>Client_Program__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OwnerId</label>
        <type>Text</type>
    </fields>
    <label>Program Period</label>
    <nameField>
        <displayFormat>PY-{000000}</displayFormat>
        <label>Program Period Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Periods</pluralLabel>
    <recordTypes>
        <fullName>Charter_Deposit_Programs</fullName>
        <active>true</active>
        <label>Charter Deposit Programs</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fractional_Lease</fullName>
        <active>true</active>
        <label>Fractional Lease</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fractional_Share</fullName>
        <active>true</active>
        <label>Fractional Share</label>
    </recordTypes>
    <recordTypes>
        <fullName>Jetcard_Membership</fullName>
        <active>true</active>
        <label>Jetcard/Membership</label>
    </recordTypes>
    <recordTypes>
        <fullName>Membership_with_Multiple_Hourly_Rates</fullName>
        <active>true</active>
        <label>Membership with Multiple Hourly Rates</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>